...
                        .foregroundStyle(.blue)
                        .font(.system(size: 14))
                        .frame(width: 80, height: 27)
                        .overlay(RoundedRectangle(cornerRadius: 6)
                            .stroke(Color.buttonBorderColor, lineWidth: 1))
                }
                .accessibilityIdentifier("TableMoreButtonIdentifier")
                .popover(isPresented: $showingPopover) {
                    if #available(iOS 16.4, *) {
                        VStack(spacing: 8) {
                            if viewModel.tableDataModel.selectedRows.count == 1 {
                                Button(action: {
                                    showingPopover = false
...
                                        .foregroundStyle(.blue)
                                        .font(.system(size: 14))
                                        .frame(height: 27)
                                }
                                .padding(.horizontal, 16)
                                .padding(.top, viewModel.tableDataModel.selectedRows.count > 1 ? 16 : 0)
                                .accessibilityIdentifier("TableEditRowsIdentifier")
                            }
                            
                            Button(action: {
                                showingPopover = false
                                viewModel.deleteSelectedRow()
                            }) {
...
                                    .accessibilityIdentifier("EditRowsDropdownFieldIdentifier")
                            case .date:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableDateView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit, isSingleLineLayout: true)
                                    .padding(.vertical, 2)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsDateFieldIdentifier")
                            case .number:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableNumberView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit)
                                    .keyboardType(.decimalPad)
                                    .frame(minHeight: 40)
                                    .cellBorder(isFocused: isFocused)
...
