...
                    .padding(.horizontal, 12)
                    .padding(.vertical, 8)
                    .background(
                        RoundedRectangle(cornerRadius: 8, style: .circular)
                            .fill(Color(uiColor: .secondarySystemFill))
                    )
                    .accessibilityIdentifier("ChangeDateIdentifier")
                    
                    Spacer()
                    
                    Button(action: {
                        self.dateString = ""
                        let event = FieldChangeData(fieldIdentifier: dateTimeDataModel.fieldIdentifier, updateValue: ValueUnion.null)
...
